--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,26 +64,29 @@ dependencies {
         transitive = true
     }
 
-    // Local Unit Tests
-    implementation "androidx.test:core:1.4.0"
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation "org.hamcrest:hamcrest-all:1.3"
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "org.robolectric:robolectric:4.3.1"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
-    testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "org.mockito:mockito-core:3.12.4"
 
-    // Instrumented Unit Tests
-    androidTestImplementation "junit:junit:4.13.2"
-    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "com.google.truth:truth:1.1.3"
-    androidTestImplementation "org.mockito:mockito-core:3.12.4"
+    /* --- Testing --- */
+
+    /* ---  Unit Tests --- */
+    final MOCKK_VERSION = '1.10.0'
+    testImplementation "io.mockk:mockk:$MOCKK_VERSION"
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+
+    // JUnit 5
+//    final JUNIT_5_VERSION = '5.6.1'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.0-M1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.0-M1"
+
+    // JUnit 4
+    final JUNIT_4_VERSION = '4.13.2'
+    testImplementation "junit:junit:$JUNIT_4_VERSION"
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.8.0-M1"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "androidx.test:runner:1.4.0"
 
 }
